--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -23,7 +23,7 @@
     "oauth/finish.html",
     "focusstreak/overlay.html"
   ],
-  "options_page": "options/index.html",
+  "options_page": "options/options.html",
   "permissions": [
     "idle",
     "tabs",
